--- a/package.json
+++ b/package.json
@@ -17,15 +17,21 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.2",
     "framer-motion": "^11.2.12",
     "lucide-react": "^0.396.0",
+    "mini-svg-data-uri": "^1.4.4",
     "moment": "^2.30.1",
     "next": "14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-speech-to-text": "^0.8.0",
+    "react-hot-toast": "^2.4.1",
+    "react-webcam": "^7.2.0",
+    "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0"
