--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-hook-speech-to-text": "^0.8.0",
     "react-hot-toast": "^2.4.1",
+    "react-responsive": "^10.0.0",
     "react-webcam": "^7.2.0",
     "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.3.0",
